--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
         <java.version>21</java.version>
         <kotlin.version>1.9.20</kotlin.version>
         <commons-csv.version>1.10.0</commons-csv.version>
-        <springdoc.version>2.2.0</springdoc.version>
+        <springdoc.version>2.3.0</springdoc.version>
+        <editorconfig.version>0.1.1</editorconfig.version>
     </properties>
     <dependencies>
         <dependency>
@@ -142,7 +143,7 @@
             <plugin>
                 <groupId>org.ec4j.maven</groupId>
                 <artifactId>editorconfig-maven-plugin</artifactId>
-                <version>0.1.1</version>
+                <version>${editorconfig.version}</version>
                 <executions>
                     <execution>
                         <id>check</id>
