👌 IMPROVE: Update Java version to 24 in pom.xml
resolved #123

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <commons-csv.version>1.12.0</commons-csv.version>
         <springdoc.version>2.7.0</springdoc.version>
         <editorconfig.version>0.1.3</editorconfig.version>
+        <java.version>24</java.version>
     </properties>
     <dependencies>
         <dependency>
